[package]
name = "catty"
description = "Send and await a value asynchronously"
version = "0.1.5"
authors = ["Restioson <restiosondev@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Restioson/catty"
documentation = "https://docs.rs/catty"
readme = "README.md"
keywords = ["async", "futures", "async-await", "oneshot", "channel"]
categories = ["asynchronous", "concurrency"]

[dependencies]
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }

[dev-dependencies]
pollster = "0.2"
criterion = { version = "0.3", features = ["async", "async_futures", "async_tokio"] }
futures = "0.3"
tokio = { version = "1", features = [ "sync", "rt-multi-thread" ] } 

[[bench]]
name = "basic"
harness = false
